# no3sis

./: .gitignore  .gitmodules  .mcp.json  .sops.yaml  .todos  CHANGELOG.md  LOGOS.md  Makefile  README.md  chunk-01-executive-summary.md  flake.nix  model.onnx  no3sis.py  pyproject.toml  rename_to_no3sis.sh  requirements.txt  test_mcp_servers.sh  train.py
.github/: CHANGES.md  WORKFLOW_REFACTORING_REPORT.md  verify-workflow-refactoring.sh
.no3sis/: HYBRID_ARCHITECTURE_DIAGNOSTIC.md
.no3sis/agents/code-hound/: README.md  code_hound_config.yml  pyproject.toml
.no3sis/agents/code-hound/src/code_hound/: __init__.py  server.py
.no3sis/agents/code-hound/tools/: __init__.py
.no3sis/agents/file-creator/: pyproject.toml
.no3sis/agents/file-creator/src/file_creator/: __init__.py  server.py
.no3sis/agents/file-creator/tools/: __init__.py  no3sis_integration.py  template_tools.py
.no3sis/agents/test-runner/: README.md  pyproject.toml
.no3sis/agents/test-runner/src/test_runner/: server.py
.no3sis/agents/test-runner/tools/: __init__.py  no3sis_integration.py
.synapse/: HYBRID_ARCHITECTURE_DIAGNOSTIC.md
benchmarks/: message_router_benchmark.py  orchestration_reactive_benchmark.py  reactive_benchmark.py
data/: test.txt  train.txt
docs/: 3-layer-architecture-current-state.md  AGENT_IDENTITY_CATALOGUE.md  BERKENSTEIN_BOUND_UNSOLVALBILITY.md  CIG3.md  GEMINI.md  IMPLEMENTATION_SEQUENCE.md  MAHAKALA_FRAMEWORK.md
examples/: example_agents.py
lib/: cli.py  config.py  dirichlet_characters.py  orchestration.py  project.py  task_state.py  updater.py  version_manager.py
schemas/: corpus_callosum.schema.json
scripts/: batch_migrate_agents.py  full_sdk_migration.py  ingest_execution_memory.py  learn_patterns_from_boss.py  migrate_agents_to_new_sdk.py  migrate_six_agents.py  migrate_to_shared_mock_sdk.py  migrate_ts_specialist_tools.py  monitor_reactive_metrics.py  render_formalizations.py  restore_backups.py  update_tool_decorators.py
templates/: chunk-template.md  chunk.lean
tests/: test_cli.py  test_context.py  test_day3_4_features.py  test_dirichlet_characters.py  test_doctor.py  (+4 more)
(+881 files in other folders)
