[project]
name = "code-hound"
version = "1.0.0"
description = "MCP server for static analysis and TDD/SOLID/DRY enforcement"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "No3sis System Contributors"}
]

dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# Optional linters (user installs based on needs)
linters = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
code-hound = "code_hound.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_hound"]
